--- a/styles.css
+++ b/styles.css
@@ -3,24 +3,55 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 18px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: 10px;
 }
 
-h1 {
-    font-size: 36x;
-}
+
 
 .api-section {
-    width: 90%;
-    max-width: 900px;
-    padding: 24px;
-    border: 1px solid #999;
-    border-radius: 4px;
-    margin: 24px 24px 0;
+    margin-top: 80px;
+    border: 4px solid black;
+    padding: 120px;
+    background-color: antiquewhite;
 }
 
 .api-content {
     font-weight: bold;
     font-style: italic;
     color: #999;
+}
+
+
+h1{
+    text-align: center;
+}
+
+.weather{
+    margin-bottom: 50px;
+    margin-top: -50px;
+}
+
+.firstCont{
+    display: flex;
+    justify-content: center;
+}
+
+label{
+    margin-left: 150px;
+    margin-bottom: 20px;
+}
+
+#input{
+    padding: 5px;
+    margin-right: 15px;
+    border: 3px solid black;
+    text-align: center;
+}
+
+#container{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-top: 50px;
 }
